fix unnecessary scrollbars

--- a/arcanenibble-theme/static/css/style.css
+++ b/arcanenibble-theme/static/css/style.css
@@ -100,7 +100,7 @@ pre code {
     pre {
         margin-right: 10em;
     }
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 /* actual blog posts */
